# ironclad

./: .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
docs/: validation_rules.txt
include/: config.h
include/intel/: mpxrt.h  mpxrt.h~
include/ironclad/: aptr.hpp  array.hpp  casts.hpp  common.hpp  global_array.hpp  ironclad.hpp  laptr.hpp  lptr.hpp  matrix.hpp  ptr.hpp  safe_io.hpp  safe_mem.hpp  safe_string.hpp  stack.hpp  tags.hpp  util.hpp  varray.hpp
libs/gc/: CMakeLists.txt  Makefile  Makefile.am  Makefile.direct  Makefile.in  alloc.c  allocation.cpp  config.status  config.txt  libtool  malloc.c  mark.c  reclaim.c  test_cpp  tracetest
libs/gc/.deps/: allchblk.Plo  alloc.Plo  allocation.Plo  atomic_ops.Plo  backgraph.Plo  blacklst.Plo  checksums.Plo  cordbscs.Plo  cordprnt.Plo  cordtest.Plo  cordxtra.Plo  dbg_mlc.Plo  dyn_load.Plo  finalize.Plo  gc_cpp.Plo  gc_dlopen.Plo  gcj_mlc.Plo  headers.Plo  huge_test.Po  initsecondarythread.Po  leak_test.Po  mach_dep.Plo  malloc.Plo  mallocx.Plo  mark.Plo  mark_rts.Plo  middle.Po  misc.Plo  new_hblk.Plo  obj_map.Plo  os_dep.Plo  pcr_interface.Plo  pthread_start.Plo  pthread_stop_world.Plo  pthread_support.Plo  ptr_chck.Plo  reclaim.Plo  smash_test.Po  specific.Plo  staticrootslib.Plo  (+9 more)
libs/gc/include/: allocation.hpp  gc.h  gc_cpp.h  gc_mark.h
libs/gc/include/private/: gc_pmark.h  gc_priv.h
libs/gc/libatomic_ops/: Makefile  config.status
libs/gc/libatomic_ops/doc/: Makefile
libs/gc/libatomic_ops/src/: Makefile
libs/gc/libatomic_ops/src/atomic_ops/: Makefile
libs/gc/libatomic_ops/src/atomic_ops/sysdeps/: Makefile
libs/gc/libatomic_ops/tests/: Makefile
poc/: aptr.hpp  vector.cpp
refactortests/: run_tests.py
refactortests/basic_types/: aptr.cpp  aptr.cpp~  ptr.cpp~
src/: Makefile  Makefile~  mpxrt-utils.c  mpxrt-utils.c~  mpxrt.c  mpxrt.c~
tools/: README
tools/ironclad-refactor/: CMakeLists.txt  IroncladRefactor.cpp
tools/refactoring-tool/: AnalysisVisitor.hpp  BuilderVisitor.hpp  CMakeLists.txt  Makefile  TranslateSafe.cpp  Translator.hpp  Util.hpp
tools/validator/: CMakeLists.txt  Makefile  Util.hpp  Validate.cpp
unittests/: Makefile.am  aptrsuite.cc  cstdiosuite.cc  cstringsuite.cc  laptrsuite.cc  lptrsuite.cc  ptrsuite.cc
unittests/.deps/: aptrsuite.Po  cstdiosuite.Po  cstringsuite.Po  laptrsuite.Po  lptrsuite.Po  main.Po  ptrsuite.Po
